--- a/prueba.html
+++ b/prueba.html
@@ -7,7 +7,7 @@
 
 <p>
   <small
-    >The content is licensed under a Creative Commons Attribution-ShareAlike 2.5
+    >The content de este increíble producto is licensed under a Creative Commons Attribution-ShareAlike 2.5
     Generic License.</small
   >
 </p>
